oxiplate-derive/tests/broken/extends/block-with-missing-name.stderr
error: Expected an identifier
 --> tests/broken/extends/block-with-missing-name.rs:4:64
  |
4 | #[oxiplate_inline(r#"{% extends "extends.html.oxip" %}{% block %}"#)]
  |                                                                ^^
